Fixing the hover effect on mobile view

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -198,7 +198,7 @@ header{
 
                 .about{
                     &:hover::after{
-                        width: calc(45% - .36rem);
+                        width: calc(30% - .36rem);
                     }
                 }
           
@@ -460,8 +460,6 @@ main{
                 padding: 6.25rem 1.875rem 2.5rem;
                 box-shadow: 0 .938rem 2.813rem rgba(0, 0, 0, .1);
                 border-radius: .5rem;
-                // display: flex;
-                // flex-direction: column;
         
                 &::before{
                     content: '';
@@ -593,7 +591,6 @@ main{
         }
 
         .second-container{
-            // height: 100vh;
             width: 100%;
             @include flex-setup-1;
             margin-top: 2rem;
@@ -766,8 +763,6 @@ main{
 
                 .image-list{
                     @include flex-setup-0;
-                    // display: grid;
-                    // grid-template-columns: repeat(10, 1fr);
                     gap: 0 18px;
                     margin-bottom: 1.875rem;
                     overflow-x: auto;
